<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_64px"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/combo_50px"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_contest"
        android:icon="@drawable/prize_50px"
        android:title="@string/title_contests" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/notification_64px"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile_50px"
        android:title="@string/title_profile" />

</menu>