<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DAE0E2"
    android:gravity="center"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/login_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="10dp"
        android:layout_gravity="center"
        card_view:cardCornerRadius="24dp"
        card_view:cardElevation="12dp">


        <LinearLayout
            android:id="@+id/sign_in_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="180dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/welcome_to_lco"
                android:textColor="#2C3335"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="4dp"
                android:text="@string/sign_in_to_continue"
                android:textColor="#757575"
                android:textSize="16sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/sign_in_email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/sign_in_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:ems="10"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/colorAccent" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/sign_in_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAccent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/sign_in_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:ems="10"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:textColorHint="@color/colorAccent" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/sign_in_forgot_pass_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="end"
                android:padding="8dp"
                android:text="@string/forgot_password"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="#212121"
                android:textStyle="bold"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/login"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:background="@drawable/custom_button"
                android:padding="18dp"
                android:text="@string/login"
                android:textColor="#000000"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:padding="3dp"
                    android:text="@string/have_account"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/signUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:padding="6dp"
                    android:text="@string/sign_up"
                    android:textColor="#218F76"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>