<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:weightSum="3">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.3">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/radius">

            <TextView
                android:id="@+id/tv_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="50dp"
                android:text="@string/welcome"
                android:textColor="#fff"
                android:textSize="25sp" />

            <ImageView
                android:id="@+id/img_book"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_alignParentEnd="true"
                android:layout_margin="20dp"
                android:layout_toRightOf="@+id/tv_welcome"
                android:src="@drawable/images" />

            <Button
                android:id="@+id/btn_signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_welcome"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/radius_for_bar"
                android:text="@string/signup"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_signIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_welcome"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/btn_signUp"
                android:background="@drawable/radius_for_bar"
                android:text="@string/signin"
                android:textAllCaps="false" />

        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="13dp"
                android:layout_marginBottom="1dp"
                android:src="@drawable/document_50px" />

            <TextView
                android:id="@+id/tv_topics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="1dp"
                android:layout_toRightOf="@id/imageView"
                android:text="@string/topics"
                android:textColor="#3EB397"
                android:textSize="28dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp">


                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    card_view:cardBackgroundColor="#3EB397"
                    card_view:cardCornerRadius="15dp"
                    card_view:cardElevation="6dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_aptitude"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/aptitude"
                            android:textSize="19sp"
                            android:textStyle="bold" />

                    </LinearLayout>


                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    card_view:cardBackgroundColor="#3EB397"
                    card_view:cardCornerRadius="15dp"
                    card_view:cardElevation="6dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_logical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/logical"
                            android:textSize="19sp"
                            android:textStyle="bold" />


                    </LinearLayout>


                </android.support.v7.widget.CardView>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    card_view:cardBackgroundColor="#3EB397"
                    card_view:cardCornerRadius="15dp"
                    card_view:cardElevation="6dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_verbal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/verbal"
                            android:textSize="19sp"
                            android:textStyle="bold" />

                    </LinearLayout>


                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    card_view:cardBackgroundColor="#3EB397"
                    card_view:cardCornerRadius="15dp"
                    card_view:cardElevation="6dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_technical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/technical"
                            android:textSize="19sp"
                            android:textStyle="bold" />


                    </LinearLayout>


                </android.support.v7.widget.CardView>
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


</LinearLayout>

