<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    tools:context=".AutoComplete">

    <LinearLayout
        android:id="@+id/rl_topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_inner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-19dp"
            card_view:cardBackgroundColor="#3EB397"
            card_view:cardCornerRadius="23dp"
            card_view:cardElevation="6dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:id="@+id/img_profilePhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_23sdp"
                    android:src="@drawable/male_user_48px" />

                <TextView
                    android:id="@+id/tv_profileName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/img_profilePhoto"
                    android:layout_centerHorizontal="true"
                    android:text="Mahendhar Jakkula"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold" />

            </RelativeLayout>


        </android.support.v7.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">


            <ImageView
                android:id="@+id/img_scoreBoard"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_gravity="center"
                android:background="@drawable/report_card_50px"
                android:backgroundTint="#3EB397" />

            <TextView
                android:id="@+id/tv_scoreBoard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="Score Board"
                android:textColor="#323436"
                android:textSize="@dimen/_16sdp" />


        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_8sdp"
            card_view:cardBackgroundColor="#3EB397"
            card_view:cardCornerRadius="@dimen/_15sdp"
            card_view:cardElevation="@dimen/_6sdp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_2sdp">

                <TextView
                    android:id="@+id/tv_aptitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/aptitude"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_total_Marks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_aptitude"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/totalscore"
                    android:textSize="@dimen/_13sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_total_Marks"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/marksScored"
                    android:textSize="@dimen/_13sdp" />

            </RelativeLayout>


        </android.support.v7.widget.CardView>




    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_8sdp"
            card_view:cardBackgroundColor="#3EB397"
            card_view:cardCornerRadius="@dimen/_15sdp"
            card_view:cardElevation="@dimen/_6sdp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_2sdp">

                <TextView
                    android:id="@+id/tv_logical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/logical"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_total_Marks2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_logical"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/totalscore"
                    android:textSize="@dimen/_13sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_total_Marks2"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/marksScored"
                    android:textSize="@dimen/_13sdp" />

            </RelativeLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_12sdp"
            card_view:cardBackgroundColor="#3EB397"
            card_view:cardCornerRadius="@dimen/_15sdp"
            card_view:cardElevation="@dimen/_6sdp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/tv_verbal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/verbal"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_total_Marks3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_verbal"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/totalscore"
                    android:textSize="@dimen/_13sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_total_Marks3"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/marksScored"
                    android:textSize="@dimen/_13sdp" />

            </RelativeLayout>


        </android.support.v7.widget.CardView>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>


</RelativeLayout>